# DocuMind-AI-RAG-Powered-PDF-Question-Answering-System.

./: .gitignore  README.md  main.py  requirements.txt  streamlit_app.py  vector_db.py
RAG Production App/: data_loader.py  pyproject.toml
RAG Production App/qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
