[project]
name = "rag-production-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "corn>=8",
    "fastapi>=0.135.1",
    "groq>=1.0.0",
    "inngest>=0.5.16",
    "llama-index-core>=0.14.15",
    "llama-index-readers-file>=0.5.6",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
    "uv>=0.10.7",
    "uvicorn>=0.41.0",
]
